--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,3 +39,16 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+  notify:
+    name: Discord notification
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    if: ${{ always() }}
+
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GIT_TOKEN }}
+          discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
