--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.2
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.0.0-beta
 	maven_group = com.fantasycraft
-	archives_base_name = fabric-fantasycraft
+	archives_base_name = fabric-fantasycraft-1.16.5
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
