--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,31 +8,25 @@ on: [pull_request, push]
 
 jobs:
   build:
+    name: Build the code
     strategy:
       matrix:
-        # Use these Java versions
-        java: [
-          1.8,  # Minimum supported by Minecraft
-        ]
         # and run on both Linux and Windows
         os: [ubuntu-20.04, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v1
+      - name: Checkout Repo
+        uses: actions/checkout@v2.3.4
+      - name: Setup Java JDK
+        uses: actions/setup-java@v1.4.3
         with:
-          java-version: ${{ matrix.java }}
+          java-version: 1.8
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
       - name: build
         run: ./gradlew build
-      - name: capture build artifacts
-        if: ${{ runner.os == 'Linux' && matrix.java == '11' }} # Only upload artifacts built from LTS java on one OS
+      - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2
         with:
           name: Artifacts
