--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ minecraft {
 }
 
 repositories {
+	maven { url "https://maven.shedaniel.me/" }
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -30,6 +31,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modApi("me.shedaniel.cloth:cloth-config-fabric:4.11.15") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
