--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version = project.mod_version
 group = project.maven_group
 
 minecraft {
-	accessWidener "src/main/resources/fantasycraft.accesswidener"
+	accessWidener = file("src/main/resources/fantasycraft.accesswidener")
 }
 
 repositories {
