--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ minecraft {
 
 repositories {
 	maven { url "https://maven.shedaniel.me/" }
+	maven {
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
+	}
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -35,6 +39,9 @@ dependencies {
 	modApi("me.shedaniel.cloth:cloth-config-fabric:4.11.15") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
+
+	modImplementation "io.github.cottonmc:LibGui:3.2.2+1.16.3"
+	include "io.github.cottonmc:LibGui:3.2.2+1.16.3"
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
